--- a/Ejercicios_clase_24_10_2024/JsonArchivoTabla.html
+++ b/Ejercicios_clase_24_10_2024/JsonArchivoTabla.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,34 +8,89 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
         }
+
         form {
             margin-bottom: 20px;
         }
-        input[type="text"], input[type="date"], input[type="number"] {
+
+        input[type="text"],
+        input[type="date"],
+        input[type="number"] {
             margin-bottom: 10px;
             padding: 8px;
             width: 100%;
         }
+
         table {
             width: 100%;
             border-collapse: collapse;
         }
-        th, td {
+
+        table,
+        th,
+        td {
             border: 1px solid black;
+        }
+
+        th,
+        td {
             padding: 8px;
             text-align: left;
         }
+
         th {
             background-color: #007bff;
             color: white;
         }
+
+        button {
+            padding: 5px 10px;
+            background-color: red;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: darkred;
+        }
+
+        #saveJsonButton {
+            background-color: green;
+            margin-top: 20px;
+            cursor: pointer;
+        }
+
+        #saveJsonButton:hover {
+            background-color: darkgreen;
+        }
+
+        #personTableBody {
+            display: block;
+            max-height: 150px;
+            overflow-y: auto;
+        }
+
+        #personaTableBody tr {
+            display: table;
+            width: 100%;
+            table-layout: fixed;
+        }
+
+        thead,
+        tbody tr {
+            display: table;
+            width: 100%;
+            table-layout: fixed;
+        }
     </style>
 </head>
+
 <body>
     <h2>Formulario de Registro de Personas</h2>
-    <!-- Formulario -->
+
+    <!-- Formulario para agregar personas -->
     <form id="personForm">
         <label for="clave">Clave:</label><br>
         <input type="text" id="clave" required><br>
@@ -52,7 +108,8 @@
     </form>
 
     <h2>Personas Registradas</h2>
-    <!-- Tabla de Registros -->
+
+    <!-- Tabla para mostrar los registros de personas -->
     <table>
         <thead>
             <tr>
@@ -60,44 +117,55 @@
                 <th>Nombre</th>
                 <th>Fecha de Nacimiento</th>
                 <th>Edad</th>
+                <th>Acciones</th>
             </tr>
         </thead>
         <tbody id="personTableBody">
+            <!-- Aquí se mostrarán los registros -->
         </tbody>
     </table>
 
+
+    <button id="saveJsonButton">Guardar en JSON</button>
+
     <script>
-        let personas = []; // Arreglo para manejar los registros
+
+        let personas = [];
+
         const form = document.getElementById('personForm');
         const claveInput = document.getElementById('clave');
         const nombreInput = document.getElementById('nombre');
         const fechaNacInput = document.getElementById('fechaNac');
         const edadInput = document.getElementById('edad');
         const tableBody = document.getElementById('personTableBody');
+        const saveJsonButton = document.getElementById('saveJsonButton');
 
-        form.addEventListener('submit', function(e) {
-            e.preventDefault(); // Evita que el formulario se envíe automáticamente
 
-            const persona = { // Objeto con los datos de la persona
+        form.addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            const persona = {
                 clave: claveInput.value,
                 nombre: nombreInput.value,
                 fechaNac: fechaNacInput.value,
                 edad: edadInput.value
             };
 
-            personas.push(persona); // Agrega el objeto registro al arreglo
-            form.reset(); // Limpia el formulario
-            actualizarTabla(); // Actualiza la tabla con los registros
+            personas.push(persona);
+            form.reset();
+            actualizarTabla();
         });
 
-        // Función para actualizar la tabla
         function actualizarTabla() {
-            tableBody.innerHTML = ''; // Limpia la tabla
 
-            personas.forEach(function(persona) { // Recorre el arreglo para mostrarlo
-                const row = document.createElement('tr'); // Crea el renglón
+            tableBody.innerHTML = '';
 
-                const claveCell = document.createElement('td'); // Crea celdas
+
+            personas.forEach(function (persona, index) {
+                const row = document.createElement('tr');
+
+
+                const claveCell = document.createElement('td');
                 claveCell.textContent = persona.clave;
 
                 const nombreCell = document.createElement('td');
@@ -108,24 +176,46 @@
 
                 const edadCell = document.createElement('td');
                 edadCell.textContent = persona.edad;
-                //celda para el boton eliminar 
+
+
                 const accionesCell = document.createElement('td');
                 const eliminarButton = document.createElement('button');
                 eliminarButton.textContent = 'Eliminar';
-                eliminarButton.addEventListener('click',function(){
-                    eliminarPersona(index)
-                })
+                eliminarButton.addEventListener('click', function () {
+                    eliminarPersona(index);
+                });
+
                 accionesCell.appendChild(eliminarButton);
-                // Agrega celdas al renglón
+
                 row.appendChild(claveCell);
                 row.appendChild(nombreCell);
                 row.appendChild(fechaNacCell);
                 row.appendChild(edadCell);
+                row.appendChild(accionesCell);
 
-                // Agrega el renglón a la tabla
+
                 tableBody.appendChild(row);
             });
         }
+
+        function eliminarPersona(index) {
+            personas.splice(index, 1);
+            actualizarTabla();
+        }
+
+        saveJsonButton.addEventListener('click', function () {
+            const jsonData = JSON.stringify(personas, null, 2);
+            const blob = new Blob([jsonData], { type: 'application/json' });
+            const url = URL.createObjectURL(blob);
+
+            const a = document.createElement('a');
+            a.href = url;
+            a.download = 'personas.json';
+            a.click();
+
+            URL.revokeObjectURL(url);
+        });
     </script>
 </body>
+
 </html>
